fix: nodemon watch test.html

--- a/test.html
+++ b/test.html
@@ -3,8 +3,9 @@
   <body>
     <div class="flex h-screen justify-center items-center">
       <div class="text-center bg-blue-400 p-10">
-        <h1 class="text-3xl font-bold font-ginto">does Ginto Nord work?</h1>
-        <h1 class="text-3xl font-bold font-whitney">does Whitney work?</h1>
+        <h1 class="text-3xl font-bold font-ginto">image id: {{id}}</h1>
+        <p class="text-3xl font-bold font-ginto">does Ginto Nord work?</p>
+        <p class="text-3xl font-bold font-whitney">does Whitney work?</p>
       </div>
     </div>
   </body>
